# apc

./: .gitignore  MANIFEST.in  README.md  apc.py  apcgui.py  requirements.txt  setup.cfg  setup.py
apc/: __init__.py  __main__.py  adf.py  adf_profile.py  babel.cfg  cli.py  commands.py  config.py  hacks.py  populations.py  test.py  utils.py
apc/config/: animal_details.json  animal_names.json  bear.txt  fur_names.json  reserve_details.json  reserve_names.json
apc/locale/: apc.pot  base.pot  locale_notes.txt
apc/locale/de_DE/LC_MESSAGES/: apc.mo  apc.po
apc/locale/en_DE/LC_MESSAGES/: apc.mo  apc.po  messages.mo  messages.po
apc/locale/en_US/LC_MESSAGES/: apc.mo  apc.po  messages.mo  messages.po
apc/locale/es_ES/LC_MESSAGES/: apc.mo  apc.po
apc/locale/es_MX/LC_MESSAGES/: apc.mo  apc.po
apc/locale/ru_RU/LC_MESSAGES/: apc.mo  apc.po
apc/locale/zh_CN/LC_MESSAGES/: apc.mo  apc.po
apcgui/: __init__.py  __main__.py  gui.py  logo.py
apcgui/config/: save_path.txt
apcgui/locale/: apcgui.pot
apcgui/locale/de_DE/LC_MESSAGES/: apcgui.mo  apcgui.po
deca/: db_core.py
pops/: animal_population_0  animal_population_1  animal_population_10  animal_population_11  animal_population_12  animal_population_13  animal_population_14  animal_population_2  animal_population_3  animal_population_4  animal_population_6  animal_population_7  animal_population_8  animal_population_9
scans/: furs.json  global_furs.json  scan.csv
scripts/: apc.bat  apc_pack.bat  apcgui.bat  apcgui_pack.bat  compile.bat  extract.bat  init.bat  update.bat
(+4 files in other folders)
