[metadata]
name = apc
version = 1.0.0
url = https://github.com/rollerb/apc

[options]
packages =
  apc
  apcgui
  deca
install_requires =
  typer<0.5.0
  rich==12.6.0
  numpy==1.23.4
  PySimpleGUI==4.60.4  
include_package_data = True

[options.entry_points]
console_scripts =
  apc=apc.__main__:main
  apcgui=apcgui.__main__:main